# ngobrol

./: .gitignore  README.md
backend/: .env.example  Cargo.toml
backend/src/: config.rs  db.rs  error.rs  main.rs
backend/src/cache/: mod.rs
backend/src/handlers/: auth.rs  mod.rs  room.rs
backend/src/middleware/: auth.rs  extractor.rs  mod.rs
backend/src/models/: mod.rs  response.rs  room.rs  user.rs
backend/src/repositories/: mod.rs  room_repo.rs  user_repo.rs
backend/src/services/: auth_service.rs  mod.rs  room_service.rs
backend/src/utils/: jwt.rs  password.rs
backend/src/websocket/: mod.rs
frontend/: .env.example  package-lock.json
